feat(learning-dashboard): add live Boot condition-evaluation-report scenario
This is the third and last "out of scope" candidate from
docs/plan/03-learning-dashboard-design.md section 9, and structurally
different from all 6 prior scenarios: ConditionEvaluationReport exists
fully formed the instant ApplicationContext.refresh() finishes, so
there's no "step" to observe - the natural interaction is "change
properties, re-run, see the resulting tree," not step/play/pause.

experiments/auto-configuration-lab gets ConditionReportLab, a
short-lived main() that builds a context with property overrides,
queries ConditionEvaluationReport.get(beanFactory), and hand-writes
one line of JSON to stdout - not Jackson, since this module
deliberately keeps Jackson testImplementation-only so
@ConditionalOnClass(name=".. ObjectMapper") demonstrates "absent from
runtime classpath"; adding Jackson would silently break that demo.
Running it live surfaced something the design didn't anticipate:
@EnableAutoConfiguration pulls in the entire real spring-boot-autoconfigure
catalog (100+ classes), not just this lab's 4 - filtered the report to
sources under lab.experiments.autoconfig to keep the dashboard focused
on what it's actually teaching.

Backend: new ConditionReportRunner is intentionally separate from
ScenarioSession/TracerServer (no JDI, no stepping, no persistent
process) with its own event, WebSocket controller, and STOMP topic
(/topic/condition-report, kept off /topic/scenario since the message
shape doesn't fit that union). Verified via a real ProcessBuilder +
gradlew-classpath-resolution integration test.

Frontend: ScenarioMeta gets interactionMode: "stepped" | "snapshot" -
condition-report hides TransportControls and the hit counter (both
meaningless without steps) and renders a new self-contained
ConditionReportPanel with its own STOMP hook, re-run presets, and an
interactive source -> conditions tree. No reuse of
StatusGraph/Swimlane/Pipeline - the data shape is genuinely a 